[package]
name = "hayaku"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
cliclack = "0.3.6"
globset = "0.4.16"
ignore = "0.4.23"
log = "0.4.27"
owo-colors = "4.2.2"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.134"
tera = "1.20.0"
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.13.0"
